Improve a tag styling in posts

--- a/posts/002-tenets-of-functional-programming.mdx
+++ b/posts/002-tenets-of-functional-programming.mdx
@@ -239,7 +239,7 @@ So what is a functor? Ask any developer and I guarantee they will each give you 
 
 > A functor is a set of values arranged in a shape that can be mapped over (or changed).A functor is a collection that can be passed a function and apply it non-destructively to all of its elements, returning another functor.Functions or Objects which have implemented .map or variation of map.
 
-Little confused? You're not alone. Let's take a look at an example you may already be using. Let's explore the JavaScript [Array.map](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/map).
+Little confused? You're not alone. Let's take a look at an example you may already be using. Let's explore the JavaScript [Array.prototype.map](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/map).
 
 ### Scenario
 
