Make Paper invisible

--- a/posts/001-a-mac-guys-guide-to-windows-development.mdx
+++ b/posts/001-a-mac-guys-guide-to-windows-development.mdx
@@ -2,7 +2,7 @@
 title: A Mac Guy’s Guide to Windows Development
 status: 'published'
 publishedAt: 2019-08-29
-brief: Why You Need To Try WSL
+brief: Why You Need To Try WSL 🐧.
 tags:
   - WSL
   - Linux
