--- a/posts/002-tenets-of-functional-programming.mdx
+++ b/posts/002-tenets-of-functional-programming.mdx
@@ -2,7 +2,7 @@
 title: Tenets of Functional Programming
 status: 'published'
 publishedAt: 2020-12-01
-brief: A beginners Guide
+brief: A Beginners Guide.
 tags:
   - Functional Programming
   - JavaScript
