--- a/posts/001-a-mac-guys-guide-to-windows-development.mdx
+++ b/posts/001-a-mac-guys-guide-to-windows-development.mdx
@@ -89,4 +89,4 @@ Because all settings in VS Code eventually become some sort of `json` object. Wh
 4. Switch between gaming & coding like an absolute badass.
 5. Profit.
 
-I had such a great experience switching to this setup that I was even able to generate a [super small portfolio site](https://jameswalsh.tech/) completely in windows with my Mac tightly closed in my backpack. I took plenty of Overwatch breaks because for the first time... _I could_.
+I had such a great experience switching to this setup that I was even able to generate a super small side project completely in windows with my Mac tightly closed in my backpack. I took plenty of Overwatch breaks because for the first time... _I could_.
