Add support for cover images to contentlayer

--- a/posts/tenets-of-functional-programming.mdx
+++ b/posts/tenets-of-functional-programming.mdx
@@ -1,13 +1,13 @@
 ---
 title: Tenets of Functional Programming
+coverImage: /covers/functional-programming.jpeg
 status: 'published'
 publishedAt: 2020-12-01
 brief: A Beginners Guide.
 tags:
-  - Functional Programming
+  - FunctionalProgramming
   - JavaScript
-  - Web Development
-  - Beginner Developers
+  - FPvsOOP
 ---
 
 _I originally published this article in Dec of 2020, but has been updated & adapted as time has gone on._
