--- a/posts/a-mac-guys-guide-to-windows-development.mdx
+++ b/posts/a-mac-guys-guide-to-windows-development.mdx
@@ -1,12 +1,12 @@
 ---
 title: A Mac Guy’s Guide to Windows Development
+coverImage: /covers/linux-windows-mac.jpeg
 status: 'published'
 publishedAt: 2019-08-29
 brief: Why You Need To Try WSL 🐧.
 tags:
   - WSL
   - Linux
-  - Windows Subsystem for Linux
 ---
 
 I've been writing NodeJS on a 2016 Macbook Pro since well... _2016_. And the experience has been gr8. Except for one small problem...
