Optimize blog cover images and PageAvatar

--- a/posts/tenets-of-functional-programming.mdx
+++ b/posts/tenets-of-functional-programming.mdx
@@ -1,6 +1,6 @@
 ---
 title: Tenets of Functional Programming
-coverImage: /covers/functional-programming.jpeg
+coverImage: /covers/functional-programming.webp
 status: 'published'
 publishedAt: 2020-12-01
 brief: A Beginners Guide.
