--- a/posts/a-mac-guys-guide-to-windows-development.mdx
+++ b/posts/a-mac-guys-guide-to-windows-development.mdx
@@ -1,6 +1,6 @@
 ---
 title: A Mac Guy’s Guide to Windows Development
-coverImage: /covers/linux-windows-mac.jpeg
+coverImage: /covers/linux-windows-mac.webp
 status: 'published'
 publishedAt: 2019-08-29
 brief: Why You Need To Try WSL 🐧.
