--- a/posts/pnpm-has-yarn-and-npm-beat.mdx
+++ b/posts/pnpm-has-yarn-and-npm-beat.mdx
@@ -1,6 +1,6 @@
 ---
 title: PNPM has both Yarn & NPM Beat
-coverImage: /covers/pnpm.png
+coverImage: /covers/pnpm.webp
 status: 'published'
 publishedAt: 2023-07-23
 brief: The case for switching your JS package manager... again.
