Update article briefs

--- a/posts/a-mac-guys-guide-to-windows-development.mdx
+++ b/posts/a-mac-guys-guide-to-windows-development.mdx
@@ -3,7 +3,7 @@ title: A Mac Guy’s Guide to Windows Development
 coverImage: /covers/linux-windows-mac.webp
 status: 'published'
 publishedAt: 2019-08-29
-brief: Why you need to try WSL 🐧.
+brief: How to get started with Windows Subsystem for Linux in ~3 steps.
 tags:
   - WSL
   - Linux
