--- a/posts/pnpm-has-yarn-and-npm-beat.mdx
+++ b/posts/pnpm-has-yarn-and-npm-beat.mdx
@@ -3,7 +3,7 @@ title: PNPM has both Yarn & NPM Beat
 coverImage: /covers/pnpm.webp
 status: 'published'
 publishedAt: 2023-07-23
-brief: The case for switching your JS package manager... again.
+brief: The steel-man argument for switching your NPM package manager... yet again.
 tags:
   - pnpm
   - yarn
