Hookup individual blog page to mdx custom components

--- a/posts/a-mac-guys-guide-to-windows-development.mdx
+++ b/posts/a-mac-guys-guide-to-windows-development.mdx
@@ -9,6 +9,8 @@ tags:
   - Linux
 ---
 
+## The Problem
+
 I've been writing NodeJS on a 2016 Macbook Pro since well... _2016_. And the experience has been gr8. Except for one small problem...
 
 ![Using a mac as a trackpad](https://images.iskysoft.com/images/blog/11.jpg)
