Cleanup how fetchPostBySlug works

--- a/posts/es2023-immutable-arrays.mdx
+++ b/posts/es2023-immutable-arrays.mdx
@@ -1,14 +1,14 @@
 ---
 title: ES 2023 Immutable Arrays
 coverImage: /covers/linux-windows-mac.webp
-status: 'published'
+status: 'draft'
 publishedAt: 2023-11-30
 brief: Using toSpliced(), toSorted(), & toReversed()
 tags:
   - JavaScript
+  - Arrays
   - ES2023
   - ES14
-  - Arrays
   - Immutability
 ---
 
