--- a/posts/tenets-of-functional-programming.mdx
+++ b/posts/tenets-of-functional-programming.mdx
@@ -3,6 +3,7 @@ title: Tenets of Functional Programming
 coverImage: /covers/functional-programming.webp
 status: 'published'
 publishedAt: 2020-12-01
+lastModified: 2023-08-01
 brief: A zero knowledge beginner's guide to functional programming patterns in JavaScript.
 tags:
   - FunctionalProgramming
