Only publish descriptions to RSS feed

--- a/posts/es2023-immutable-arrays.mdx
+++ b/posts/es2023-immutable-arrays.mdx
@@ -1,5 +1,6 @@
 ---
 title: ES 2023 Immutable Arrays
+description: Test Description
 coverImage: /covers/linux-windows-mac.webp
 status: 'draft'
 publishedAt: 2023-11-30
