--- a/posts/tenets-of-functional-programming.mdx
+++ b/posts/tenets-of-functional-programming.mdx
@@ -1,5 +1,6 @@
 ---
 title: Tenets of Functional Programming
+description: Test Description
 coverImage: /covers/functional-programming.webp
 status: 'published'
 publishedAt: 2020-12-01
