--- a/posts/a-mac-guys-guide-to-windows-development.mdx
+++ b/posts/a-mac-guys-guide-to-windows-development.mdx
@@ -1,5 +1,6 @@
 ---
 title: A Mac Guy’s Guide to Windows Development
+description: Test Description
 coverImage: /covers/linux-windows-mac.webp
 status: 'published'
 publishedAt: 2019-08-29
