--- a/posts/pnpm-has-yarn-and-npm-beat.mdx
+++ b/posts/pnpm-has-yarn-and-npm-beat.mdx
@@ -1,5 +1,6 @@
 ---
 title: PNPM has both Yarn & NPM Beat
+description: Test Description
 coverImage: /covers/pnpm.webp
 status: 'published'
 publishedAt: 2023-07-23
