--- a/posts/a-mac-guys-guide-to-windows-development.mdx
+++ b/posts/a-mac-guys-guide-to-windows-development.mdx
@@ -1,6 +1,6 @@
 ---
 title: A Mac Guy’s Guide to Windows Development
-description: Test Description
+description: As both a Mac & Windows Guy, it's been no walk in the park trying to develop Node.js services on Windows devices. Especially compared to the relatively seamless experience on both Mac & Linux. But with the Windows Sub System for Linux rapidly gaining popularity, now's an excellent time to jump into getting a great dev environment setup on your gaming rig.
 coverImage: /covers/linux-windows-mac.webp
 status: 'published'
 publishedAt: 2019-08-29
