--- a/posts/pnpm-has-yarn-and-npm-beat.mdx
+++ b/posts/pnpm-has-yarn-and-npm-beat.mdx
@@ -1,6 +1,6 @@
 ---
 title: PNPM has both Yarn & NPM Beat
-description: Test Description
+description: With so many different Javascript package managers to choose from, it's no wonder that managing dependencies in JS can make us all feel a bit lost. This article is for developers who haven't run pnpm install yet. If you're on the fence about giving it a shot, I really think you should. Here's why.
 coverImage: /covers/pnpm.webp
 status: 'published'
 publishedAt: 2023-07-23
