--- a/posts/tenets-of-functional-programming.mdx
+++ b/posts/tenets-of-functional-programming.mdx
@@ -1,6 +1,6 @@
 ---
 title: Tenets of Functional Programming
-description: Test Description
+description: Today we'll be exploring the basics of functional programming. Specifically how functional programming both relates to and differs from other programming styles, like object-oriented programming. Throughout this journey into FP Land, well explore immutability, function purity, higher-order functions, functors, & referential transparency.
 coverImage: /covers/functional-programming.webp
 status: 'published'
 publishedAt: 2020-12-01
