--- a/posts/es2023-immutable-arrays.mdx
+++ b/posts/es2023-immutable-arrays.mdx
@@ -1,7 +1,7 @@
 ---
 title: ES 2023 Immutable Arrays
 description: ES2023 was released in September of this year. And this release ships with a handful of incredibly useful array methods that solve for some of JavaScripts bigger side-effects that are also easy to miss. In today's post we'll talk about those methods, and why they can save you lots of time, and headaches.
-coverImage: /covers/linux-windows-mac.webp
+thumbnail: /thumbnails/es2023-immutable-arrays.webp
 status: 'draft'
 publishedAt: 2023-11-30
 brief: Using toSpliced(), toSorted(), & toReversed()
