Add final pass & set post to publish tomorrow

--- a/posts/fast-api-dev-with-thunder-client.mdx
+++ b/posts/fast-api-dev-with-thunder-client.mdx
@@ -2,7 +2,7 @@
 title: Fast API Development with Thunder Client
 description: In the world of API development, we’ve already got some wonderful heavy hitters you can reach for to test and develop APIs in a sandbox. Today I want to make the case for why you might be time to set some of your existing tools back up on the shelf in favor of simple VSCode Extensions, or easy to use open source alternatives.
 thumbnail: /thumbnails/fast-api-dev-with-thunder-client.webp
-status: 'draft'
+status: 'published'
 publishedAt: 2024-02-07
 lastModified: 2024-02-07
 brief: Test & Develop APIs without ever leaving VSCode.
@@ -24,17 +24,17 @@ If you need something simple and fast; I highly recommend checking out [ThunderC
 
 ## ThunderClient is G.O.A.T
 
-At the risk of turning this into a marketing post instead of a technical post, I’ll share my aha moment and keep this one short.
+At the risk of turning this into a marketing post instead of a technical post, I’ll share my "aha moment" and keep this one short.
 ThunderClient is incredibly simple, but in keeping it simple there is tons of power.
 It brings the richness of a standalone API development app right to a tab inside of VSCode.
 
 There is no better DevEx than dedicating one half of VSCode to ThunderClient, with the corresponding API endpoint source code on the opposite side. This mimics how I write unit tests, and it “just works” _(especially if you have a good wide monitor setup)_.
 
-**That's it**. That's the blog post 🤣.
+**That's it, that's the whole blog post**.
 
-It's a simple idea, but sort of a game changer all at once. Sometimes the best ideas seem like small changes, but greatly improve your life.
+It's simple, but a game changer all at once. Sometimes the best ideas seem like small changes, but greatly improve your life.
 
-## Other API Dev Tools You Might like
+## Competing Tools You Might Like
 
 ### Bruno 🐶
 
@@ -55,7 +55,6 @@ HTTP Rest Client automatically picks up things like cURL commands that are liste
 
 ## Bring on the Thunder ⚡️
 
-At the end of the day ThunderClient is just a disposable text editor tab, and I have come to quite like that.
-
-I’m trying to reduce needing tons of apps and tools to build cool stuff in my spare time.
+Personally I’m trying to reduce needing tons of different apps and tools to build cool stuff in my spare time.
+At the end of the day ThunderClient is a simple disposable text editor tab, and I have come to really like that.
 I’ll gladly double up on my VSCode extensions if it means saving another download to my applications directory and I’m cool with that right now.
