--- a/posts/fast-api-dev-with-thunder-client.mdx
+++ b/posts/fast-api-dev-with-thunder-client.mdx
@@ -3,13 +3,13 @@ title: Fast API Development with Thunder Client
 description: In the world of API development, we’ve already got some wonderful heavy hitters you can reach for to test and develop APIs in a sandbox. Today I want to make the case for why you might be time to set some of your existing tools back up on the shelf in favor of simple VSCode Extensions, or easy to use open source alternatives.
 thumbnail: /thumbnails/fast-api-dev-with-thunder-client.webp
 status: 'published'
-publishedAt: 2024-02-07
-lastModified: 2024-02-07
+publishedAt: 2024-02-08
+lastModified: 2024-02-08
 brief: Test & Develop APIs without ever leaving VSCode.
 tags:
   - ThunderClient
   - HTTP
-  - Rest
+  - API
   - VSCodeExtensions
 ---
 
