Fix broken ahrefs image

--- a/posts/a-mac-guys-guide-to-windows-development.mdx
+++ b/posts/a-mac-guys-guide-to-windows-development.mdx
@@ -25,7 +25,7 @@ The fact remains that beyond gaming there may be many reasons why you are intere
 
 ## The Alpha Solution: "Cordy McCord Face"
 
-![Dongle Hell](https://blogs.synopsys.com/tousbornottousb/files/2016/12/Dongle-Hell.jpg)
+![Dongle Hell](/blog-images/dongle-hell.webp)
 
 The alpha solution is one I'm pretty sure many reading this article already do or know... I call this solution _"Cordy McCord Face"_. What you do is buy a nice laptop stand, a display switcher, and a USB hub that connects to a central keyboard and mouse. That way you can dock your MacBook, press 3 buttons total _(switch display, switch USB, power on device)_ and BOOM. Now you're cooking with avocado oil, and can 👏 "seamlessly" 👏 switch 👏 between 👏 your 👏 gaming 👏 rig 👏 and 👏 mac.
 
