Replace large image in tenets... post

--- a/posts/tenets-of-functional-programming.mdx
+++ b/posts/tenets-of-functional-programming.mdx
@@ -22,7 +22,7 @@ This article is my response to that question.
 
 I’d like to start with a soft elevator pitch on why embracing FP concepts is going to make you as happy as a dog eating a hot dog.
 
-![Dog Eating Hot Dog](https://dev-to-uploads.s3.amazonaws.com/i/otgxgaqezbzfk8el4wj4.gif)
+![Dog Eating Hot Dog](/blog-images/dog-eating-hot-dog.webp)
 
 Much like OOP, FP really starts to shine when you start focusing on crafting code by following some basic tenants. By adhering to these tenets I believe you will win:
 
