Host all images, remove external src

--- a/posts/a-mac-guys-guide-to-windows-development.mdx
+++ b/posts/a-mac-guys-guide-to-windows-development.mdx
@@ -15,7 +15,7 @@ tags:
 
 I've been writing NodeJS on a 2016 Macbook Pro since well... _2016_. And the experience has been gr8. Except for one small problem...
 
-![Using a mac as a trackpad](https://images.iskysoft.com/images/blog/11.jpg)
+![Using a mac as a trackpad](/blog-images/mac-guys-guide/gaming-on-a-mac.avif)
 
 I am an avid PC gamer. And I'm not holding my breath for a "Gaming Macbook Air" to come out any time soon... Beyond that, I also love building PCs. I know each and every component in my gaming rig because I hand-picked everything. There is a certain craftsmanship aspect to it that has always intrigued me.
 
@@ -25,7 +25,7 @@ The fact remains that beyond gaming there may be many reasons why you are intere
 
 ## The Alpha Solution: "Cordy McCord Face"
 
-![Dongle Hell](/blog-images/dongle-hell.webp)
+![Dongle Hell](/blog-images/mac-guys-guide/dongle-hell.webp)
 
 The alpha solution is one I'm pretty sure many reading this article already do or know... I call this solution _"Cordy McCord Face"_. What you do is buy a nice laptop stand, a display switcher, and a USB hub that connects to a central keyboard and mouse. That way you can dock your MacBook, press 3 buttons total _(switch display, switch USB, power on device)_ and BOOM. Now you're cooking with avocado oil, and can 👏 "seamlessly" 👏 switch 👏 between 👏 your 👏 gaming 👏 rig 👏 and 👏 mac.
 
@@ -57,11 +57,11 @@ The best part about going all in on Windows is that I bypassed Windows altogethe
 
 1. Download the [Ubuntu app](https://www.microsoft.com/en-us/p/ubuntu/9nblggh4msv6?activetab=pivot:overviewtab) from the Windows Store. Once this install is complete, you will have the [Windows Subsystem for Linux](https://docs.microsoft.com/en-us/windows/wsl/install-win10) running on your PC. _(WSL also supports a handful of other distros, I just prefer Ubuntu)_
 
-![Ubuntu App](https://thepracticaldev.s3.amazonaws.com/i/65bnmr86xziuut0wyndw.png)
+![Ubuntu App](/blog-images/mac-guys-guide/microsoft-store-ubuntu.webp)
 
 1. Install the new [Windows Terminal app](https://www.youtube.com/watch?v=8gw0rXPMMPE) from the Windows Store.
 
-   ![Terminal App](https://thepracticaldev.s3.amazonaws.com/i/hylwd64ekvc7rexbhmbb.png)
+   ![Terminal App](/blog-images/mac-guys-guide/terminal-app.webp)
 
 The new terminal app is **sleek**. It's minimal, it stays out of the way, it actually supports re-sizing _(cough cough command prompt)_, and here's the best part... If you have WSL installed it has automatic support for WSL. Just open a new WSL tab and _boom_. You're running Linux bois.
 
