Add cspell to project

--- a/posts/a-mac-guys-guide-to-windows-development.mdx
+++ b/posts/a-mac-guys-guide-to-windows-development.mdx
@@ -15,7 +15,7 @@ tags:
 
 I've been writing NodeJS on a 2016 Macbook Pro since well... _2016_. And the experience has been gr8. Except for one small problem...
 
-![Using a mac as a trackpad](/blog-images/mac-guys-guide/gaming-on-a-mac.avif)
+![Using a mac as a track pad](/blog-images/mac-guys-guide/gaming-on-a-mac.avif)
 
 I am an avid PC gamer. And I'm not holding my breath for a "Gaming Macbook Air" to come out any time soon... Beyond that, I also love building PCs. I know each and every component in my gaming rig because I hand-picked everything. There is a certain craftsmanship aspect to it that has always intrigued me.
 
@@ -63,7 +63,7 @@ The best part about going all in on Windows is that I bypassed Windows altogethe
 
    ![Terminal App](/blog-images/mac-guys-guide/terminal-app.webp)
 
-The new terminal app is **sleek**. It's minimal, it stays out of the way, it actually supports re-sizing _(cough cough command prompt)_, and here's the best part... If you have WSL installed it has automatic support for WSL. Just open a new WSL tab and _boom_. You're running Linux bois.
+The new terminal app is **sleek**. It's minimal, it stays out of the way, it actually supports re-sizing _(cough cough command prompt)_, and here's the best part... If you have WSL installed it has automatic support for WSL. Just open a new WSL tab and _boom_. You're running Linux.
 
 _Drops Mic._
 
@@ -90,7 +90,7 @@ Because all settings in VS Code eventually become some sort of `json` object. Wh
 1. Use WSL
 2. Use the new Windows Terminal App
 3. Use VSCode.
-4. Switch between gaming & coding like an absolute badass.
+4. Switch between gaming & coding like an absolute bad ass.
 5. Profit.
 
-I had such a great experience switching to this setup that I was even able to generate a super small side project completely in windows with my Mac tightly closed in my backpack. I took plenty of Overwatch breaks because for the first time... _I could_.
+I had such a great experience switching to this setup that I was even able to generate a super small side project completely in windows with my Mac tightly closed in my backpack. I took plenty of gaming breaks because for the first time... _I could_.
