--- a/posts/es2023-immutable-arrays.mdx
+++ b/posts/es2023-immutable-arrays.mdx
@@ -149,7 +149,7 @@ Since physics is still physics, & there aren’t any breakthroughs in science th
 - You can limit, & carefully place your application side effects inside just a handful of well-tested functions.
 - At the beginning of any unit of work you have a `reset` function that can help you bounce back to your initial state for either debugging or other computations that needs to happen elsewhere.
 
-### Dont Sweat Performance Yet (Probably)
+### Don't Sweat Performance Yet (Probably)
 
 Throughout the day my priorities are maximizing safety, & readability, while reducing customer bugs. This approach supports that.
 If you need to ship code with an incredibly small footprint to a resource-constrained device _(like an IoT device)_,
