--- a/posts/fast-api-dev-with-thunder-client.mdx
+++ b/posts/fast-api-dev-with-thunder-client.mdx
@@ -18,7 +18,7 @@ A lot of these tools are somewhat ubiquitous, and for good reason. They work wel
 
 ## Enter New Competition
 
-Especially [with the Insomnia drama last year](https://github.com/Kong/insomnia/issues/6577), there’s been a ton of chatter in the webdev sphere around new open source tools like [Bruno](https://github.com/usebruno/bruno) & [Hopscotch](https://github.com/hoppscotch/hoppscotch).
+Especially [with the Insomnia drama last year](https://github.com/Kong/insomnia/issues/6577), there’s been a ton of chatter in the web dev sphere around new open source tools like [Bruno](https://github.com/usebruno/bruno) & [Hopscotch](https://github.com/hoppscotch/hoppscotch).
 Putting these other solutions aside; there is a totally sweet new tool that flew onto my radar thanks to a sveltekit course published by [Jeff Delaney](https://fireship.io/contributors/jeff-delaney/). For now, this is the tool I’m ready to make stick. Why? It’s lightweight, and exactly what I need for indie development.
 If you need something simple and fast; I highly recommend checking out [ThunderClient for VS Code](https://www.thunderclient.com/).
 
@@ -44,7 +44,7 @@ There is nothing stopping you from embedding collections in a git repo and getti
 ### Hopscotch
 
 Hopscotch markets itself as an open source developer _ecosystem_ (ecosystem being key here).
-If you’re into self-hosting open solutions, Hopscotch looks like it’s spending more time going after teams and individuals who want to take on the time to figure out how to deploy Hopsscotch instead of paying another subscription.
+If you’re into self-hosting open solutions, Hopscotch looks like it’s spending more time going after teams and individuals who want to take on the time to figure out how to deploy Hopscotch instead of paying another subscription.
 It's fairly comparable to Bruno & Insomnia, with the major difference being that you feel comfortable spending the time standing up your own instance.
 
 ### HTTP Rest Client
