Continue getting cspell to pass

--- a/posts/a-mac-guys-guide-to-windows-development.mdx
+++ b/posts/a-mac-guys-guide-to-windows-development.mdx
@@ -23,13 +23,16 @@ When I come home at the end of the day and need some time to decompress 2 things
 
 The fact remains that beyond gaming there may be many reasons why you are interested in moving to Windows. This is my journey 🚀.
 
+{/* cspell:disable-next-line */}
+
 ## The Alpha Solution: "Cordy McCord Face"
 
 ![Dongle Hell](/blog-images/mac-guys-guide/dongle-hell.webp)
 
+{/* cspell:disable-next-line */}
 The alpha solution is one I'm pretty sure many reading this article already do or know... I call this solution _"Cordy McCord Face"_. What you do is buy a nice laptop stand, a display switcher, and a USB hub that connects to a central keyboard and mouse. That way you can dock your MacBook, press 3 buttons total _(switch display, switch USB, power on device)_ and BOOM. Now you're cooking with avocado oil, and can 👏 "seamlessly" 👏 switch 👏 between 👏 your 👏 gaming 👏 rig 👏 and 👏 mac.
 
-### Cordy McCord Face Problems
+### Dongle Problems
 
 If you like to re-arrange your office, ever move, have the ports on your laptop change, or have lots of dongles... it can just be a huge pain. Cable management also sucks if you need to have your office look "clean".
 
