--- a/posts/tenets-of-functional-programming.mdx
+++ b/posts/tenets-of-functional-programming.mdx
@@ -255,8 +255,8 @@ const cats = [
   { name: 'Tinkerbell', coat: 'short', gender: 'female', isIndoorCat: true },
   { name: 'Whiskers', coat: 'short', gender: 'male', isIndoorCat: false },
   { name: 'Snickers', coat: 'short', gender: 'female', isIndoorCat: true },
-  { name: 'Nala', coat: 'long', gender: 'female', isIndoorCat: false },
-  { name: 'Selina', coat: 'short', gender: 'female', isIndoorCat: false },
+  { name: 'Jenny', coat: 'long', gender: 'female', isIndoorCat: false },
+  { name: 'Garfield', coat: 'short', gender: 'female', isIndoorCat: false },
   { name: 'Gusto', coat: 'short', gender: 'male', isIndoorCat: true },
 ]
 ```
